errors corrected like animation end and extra spaces

--- a/css/cardio.css
+++ b/css/cardio.css
@@ -135,7 +135,7 @@ header .header-text {
 }
 
 header .typed {
-	display: inline-block;
+	display: none;
 	margin: 0;
 }
 
@@ -178,7 +178,7 @@ nav.navbar-fixed-top {
 	top: 0;
 	padding: 25px 0;
 	opacity: 0;
-	background: white;
+	background: #03415b;
 	box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.05);
 }
 
@@ -280,7 +280,7 @@ section {
 }
 
 .section-padded {
-	padding: 140px 0 40px;
+/* 	padding: 140px 0 40px; */
 }
 
 .cut-top {
@@ -381,7 +381,7 @@ section {
 	position: relative;
 	width: 100%;
 	height: 300px;
-	margin: 20px 0;
+/* 	margin: 20px 0; */
 }
 
 .intro-tables .intro-table .heading {
